btn clipping fix

--- a/app.css
+++ b/app.css
@@ -132,7 +132,7 @@ p {
         border-image-outset: 10px;
         border-image-slice: 60;
         border-image-repeat: round; 
-    margin: 25px;
+    margin: 15px 25px;
 }
 .menubtn:hover{
     
@@ -316,7 +316,13 @@ p {
 @media screen and (max-width: 1000px) {   
     .homemenu{
         background-color: var(--bg);
-        grid-template-columns: repeat(3, 1fr);
+        grid-template-columns: repeat(1, 1fr);
+    }
+    .logo{
+        grid-area: 1/1/2/2;
+    }
+    .menubtn{
+
     }
     h2{
         margin: 25px 0;
